--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
-    "rewrites": [
-      {
-        "source": "/app-ads.txt",
-        "destination": "/app-ads.txt"
-      }
-    ]
+    "public": "public"
   }
   
